Fixed issue popup UI on mobile

--- a/client/Components/dish_detail/dish_detail.css
+++ b/client/Components/dish_detail/dish_detail.css
@@ -624,6 +624,6 @@
 .loading-dish-detail {
     position: absolute;
     margin: 0 auto;
-    top: 50%;
+    top: 40%;
     right: 50%;
 }
